--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "highlight.js": "^9.15.10",
     "morgan": "^1.9.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
@@ -26,12 +27,11 @@
     "@vue/eslint-config-prettier": "^3.0.5",
     "babel-eslint": "^10.0.3",
     "node-sass": "^4.14.1",
-    "sass-loader": "^7.3.1",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "prettier": {
-    "singleQuote": false,
-    "semi": true
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
@@ -60,5 +60,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     }
+  },
+  "prettier": {
+    "singleQuote": false,
+    "semi": true
   }
 }
