--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^2.6.9",
     "express": "^4.17.1",
     "highlight.js": "^9.15.10",
+    "material-design-icons-iconfont": "^5.0.1",
     "morgan": "^1.9.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
