--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.9.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-uuid": "^2.0.2",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
