--- a/package.json
+++ b/package.json
@@ -8,32 +8,34 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.2.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.22",
-    "@fortawesome/free-solid-svg-icons": "^5.10.2",
-    "@fortawesome/vue-fontawesome": "^0.1.7",
+    "@auth0/auth0-spa-js": "^1.11.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
     "axios": "^0.19.2",
-    "core-js": "^2.6.9",
+    "core-js": "^2.6.11",
+    "envify": "^4.1.0",
     "express": "^4.17.1",
-    "highlight.js": "^9.15.10",
+    "highlight.js": "^9.18.3",
     "material-design-icons-iconfont": "^5.0.1",
-    "morgan": "^1.9.1",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
+    "morgan": "^1.10.0",
+    "uglify-js": "^3.10.1",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.2",
     "vue-uuid": "^2.0.2",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.3.8"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^4.5.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^4.5.2",
     "@vue/eslint-config-prettier": "^3.0.5",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "node-sass": "^4.14.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.7",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
