--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "core-js": "^2.6.11",
     "envify": "^4.1.0",
     "express": "^4.17.1",
-    "highlight.js": "^9.18.3",
+    "highlight.js": ">=10.4.1",
     "material-design-icons-iconfont": "^5.0.1",
     "morgan": "^1.10.0",
     "uglify-js": "^3.10.1",
